[package]
name = "esb"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = {version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]}
craftio-rs = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mcproto-rs = {version = "0.2.0", default-features = false, features = [ "std", "v1_15_2", "v1_16_3" ]}
shoulda = "0.1.12"
speculate = "0.1"
dotenv = "0.15.0"
tokio-test = "0.4.2"
mockito = "0.30.0"
futures = "0.3.17"
shiplift = "0.7"